fix issue on safari

--- a/source/css/_partial/venue.scss
+++ b/source/css/_partial/venue.scss
@@ -55,6 +55,7 @@
         }
         .register-button {
             position: absolute;
+            left: 30px;
             background: #0070E8;
             border-radius: 4px;
             box-sizing: border-box;
